--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1815,9 +1815,21 @@
     "@landingpage_pagebuilder_container_config_auto_sizing": {
         "description": "Checkbox Label für automatische Container-Größe im Pagebuilder Config Menü"
     },
-    "pagebuilder_button_config_auto_width": "Automatische Breite",
+    "pagebuilder_button_config_auto_width": "Automatische Größe",
     "@pagebuilder_button_config_auto_width": {
-        "description": "Checkbox Label für automatische Button-Breite im Pagebuilder Config Menü"
+        "description": "Radio-Button Label für automatische Button-Größe im Pagebuilder Config Menü"
+    },
+    "pagebuilder_button_config_min_width": "Mindestbreite (%)",
+    "@pagebuilder_button_config_min_width": {
+        "description": "Radio-Button Label für Mindestbreite in Prozent im Pagebuilder Config Menü"
+    },
+    "pagebuilder_button_config_fixed_width": "Feste Größe",
+    "@pagebuilder_button_config_fixed_width": {
+        "description": "Radio-Button Label für feste Button-Größe im Pagebuilder Config Menü"
+    },
+    "pagebuilder_button_config_content_padding": "Text Abstand",
+    "@pagebuilder_button_config_content_padding": {
+        "description": "Label für den Text Abstand im Button im Pagebuilder Config Menü"
     },
     "landingpage_pagebuilder_container_config_container_shadow": "Schatten",
     "@landingpage_pagebuilder_container_config_container_shadow": {
