--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3954,5 +3954,137 @@
     "cookie_consent_privacy_policy": "Privacy Policy",
     "@cookie_consent_privacy_policy": {
         "description": "Link text to privacy policy"
+    },
+    "landing_page_detail_status_active": "ACTIVE",
+    "@landing_page_detail_status_active": {
+        "description": "Status badge on the Landing Page Detail Page"
+    },
+    "landing_page_detail_status_inactive": "INACTIVE",
+    "@landing_page_detail_status_inactive": {
+        "description": "Status badge on the Landing Page Detail Page"
+    },
+    "landing_page_detail_created_on": "Created on",
+    "@landing_page_detail_created_on": {
+        "description": "Creation date label on the Landing Page Detail Page"
+    },
+    "landing_page_detail_last_modified": "Last modified",
+    "@landing_page_detail_last_modified": {
+        "description": "Modification date label on the Landing Page Detail Page"
+    },
+    "landing_page_detail_last_updated": "Last updated",
+    "@landing_page_detail_last_updated": {
+        "description": "Last updated label for legal texts on the Landing Page Detail Page"
+    },
+    "landing_page_detail_preview": "Preview",
+    "@landing_page_detail_preview": {
+        "description": "Preview button on the Landing Page Detail Page"
+    },
+    "landing_page_detail_open_builder": "Open Pagebuilder",
+    "@landing_page_detail_open_builder": {
+        "description": "Open Pagebuilder button on the Landing Page Detail Page"
+    },
+    "landing_page_detail_total_visits": "Total Visits",
+    "@landing_page_detail_total_visits": {
+        "description": "Total visits statistic on the Landing Page Detail Page"
+    },
+    "landing_page_detail_conversion_rate": "Conversion Rate",
+    "@landing_page_detail_conversion_rate": {
+        "description": "Conversion rate statistic on the Landing Page Detail Page"
+    },
+    "landing_page_detail_traffic_overview": "Traffic Overview",
+    "@landing_page_detail_traffic_overview": {
+        "description": "Traffic chart title on the Landing Page Detail Page"
+    },
+    "landing_page_detail_page_configuration": "Page Configuration",
+    "@landing_page_detail_page_configuration": {
+        "description": "Configuration section title on the Landing Page Detail Page"
+    },
+    "landing_page_detail_edit_configuration": "Edit",
+    "@landing_page_detail_edit_configuration": {
+        "description": "Edit configuration button on the Landing Page Detail Page"
+    },
+    "landing_page_detail_description": "Description",
+    "@landing_page_detail_description": {
+        "description": "Description label on the Landing Page Detail Page"
+    },
+    "landing_page_detail_promoter_template_text": "Promoter Template Text",
+    "@landing_page_detail_promoter_template_text": {
+        "description": "Promoter template text label on the Landing Page Detail Page"
+    },
+    "landing_page_detail_page_type": "Page Type",
+    "@landing_page_detail_page_type": {
+        "description": "Page type label on the Landing Page Detail Page"
+    },
+    "landing_page_detail_type_b2c": "B2C",
+    "@landing_page_detail_type_b2c": {
+        "description": "B2C page type on the Landing Page Detail Page"
+    },
+    "landing_page_detail_type_b2c_description": "Consumer focused landing page",
+    "@landing_page_detail_type_b2c_description": {
+        "description": "B2C page type description on the Landing Page Detail Page"
+    },
+    "landing_page_detail_type_b2b": "B2B",
+    "@landing_page_detail_type_b2b": {
+        "description": "B2B page type on the Landing Page Detail Page"
+    },
+    "landing_page_detail_type_b2b_description": "Business focused landing page",
+    "@landing_page_detail_type_b2b_description": {
+        "description": "B2B page type description on the Landing Page Detail Page"
+    },
+    "landing_page_detail_contact_options": "Contact Options",
+    "@landing_page_detail_contact_options": {
+        "description": "Contact options label on the Landing Page Detail Page"
+    },
+    "landing_page_detail_contact_calendly": "Calendly",
+    "@landing_page_detail_contact_calendly": {
+        "description": "Calendly contact option on the Landing Page Detail Page"
+    },
+    "landing_page_detail_contact_calendly_description": "Book appointments via Calendly",
+    "@landing_page_detail_contact_calendly_description": {
+        "description": "Calendly contact option description on the Landing Page Detail Page"
+    },
+    "landing_page_detail_contact_form": "Contact Form",
+    "@landing_page_detail_contact_form": {
+        "description": "Contact form option on the Landing Page Detail Page"
+    },
+    "landing_page_detail_contact_form_description": "Contact form on the page",
+    "@landing_page_detail_contact_form_description": {
+        "description": "Contact form option description on the Landing Page Detail Page"
+    },
+    "landing_page_detail_contact_both": "Both Options",
+    "@landing_page_detail_contact_both": {
+        "description": "Both contact options on the Landing Page Detail Page"
+    },
+    "landing_page_detail_contact_both_description": "Contact form + Calendly integration",
+    "@landing_page_detail_contact_both_description": {
+        "description": "Both contact options description on the Landing Page Detail Page"
+    },
+    "landing_page_detail_legal_information": "Legal Information",
+    "@landing_page_detail_legal_information": {
+        "description": "Legal information section on the Landing Page Detail Page"
+    },
+    "landing_page_detail_privacy_policy": "Privacy Policy",
+    "@landing_page_detail_privacy_policy": {
+        "description": "Privacy policy tile on the Landing Page Detail Page"
+    },
+    "landing_page_detail_imprint": "Imprint",
+    "@landing_page_detail_imprint": {
+        "description": "Imprint tile on the Landing Page Detail Page"
+    },
+    "landing_page_detail_terms_and_conditions": "Terms & Conditions",
+    "@landing_page_detail_terms_and_conditions": {
+        "description": "Terms and conditions tile on the Landing Page Detail Page"
+    },
+    "landing_page_detail_initial_information": "Initial Information",
+    "@landing_page_detail_initial_information": {
+        "description": "Initial information tile on the Landing Page Detail Page"
+    },
+    "landing_page_detail_error_loading": "Error loading landing page",
+    "@landing_page_detail_error_loading": {
+        "description": "Error message on the Landing Page Detail Page"
+    },
+    "landing_page_detail_not_found": "Landing page not found",
+    "@landing_page_detail_not_found": {
+        "description": "Not found message on the Landing Page Detail Page"
     }
 }
