--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -4086,5 +4086,82 @@
     "landing_page_detail_not_found": "Landingpage nicht gefunden",
     "@landing_page_detail_not_found": {
         "description": "Fehlermeldung auf der Landingpage Detail Seite"
+    },
+    "landing_page_detail_assigned_promoters": "Zugewiesene Promoter",
+    "@landing_page_detail_assigned_promoters": {
+        "description": "Titel der Promoter-Sektion auf der Landingpage Detail Seite"
+    },
+    "landing_page_detail_assigned_promoters_subtitle": "Verwalte Promoter-Zuweisungen für diese Landingpage",
+    "@landing_page_detail_assigned_promoters_subtitle": {
+        "description": "Untertitel der Promoter-Sektion auf der Landingpage Detail Seite"
+    },
+    "landing_page_detail_assign_promoter": "Promoter zuweisen",
+    "@landing_page_detail_assign_promoter": {
+        "description": "Button zum Zuweisen von Promotern"
+    },
+    "landing_page_detail_assign_promoter_title": "Promoter zuweisen",
+    "@landing_page_detail_assign_promoter_title": {
+        "description": "Titel des Dialogs zum Zuweisen von Promotern"
+    },
+    "landing_page_detail_total_promoters": "Promoter gesamt",
+    "@landing_page_detail_total_promoters": {
+        "description": "Label für die Gesamtanzahl der Promoter"
+    },
+    "landing_page_detail_registered_promoters": "Registriert",
+    "@landing_page_detail_registered_promoters": {
+        "description": "Label für registrierte Promoter"
+    },
+    "landing_page_detail_unregistered_promoters": "Unregistriert",
+    "@landing_page_detail_unregistered_promoters": {
+        "description": "Label für unregistrierte Promoter"
+    },
+    "landing_page_detail_no_promoters": "Keine Promoter zugewiesen",
+    "@landing_page_detail_no_promoters": {
+        "description": "Text wenn keine Promoter zugewiesen sind"
+    },
+    "landing_page_detail_no_promoters_available": "Keine Promoter verfügbar",
+    "@landing_page_detail_no_promoters_available": {
+        "description": "Text wenn keine Promoter zum Zuweisen verfügbar sind"
+    },
+    "landing_page_detail_promoters_error_title": "Fehler beim Laden der Promoter",
+    "@landing_page_detail_promoters_error_title": {
+        "description": "Fehlertitel beim Laden der Promoter"
+    },
+    "landing_page_detail_view_promoter": "Promoter anzeigen",
+    "@landing_page_detail_view_promoter": {
+        "description": "Tooltip für Promoter anzeigen Button"
+    },
+    "landing_page_detail_remove_promoter": "Promoter entfernen",
+    "@landing_page_detail_remove_promoter": {
+        "description": "Tooltip für Promoter entfernen Button"
+    },
+    "landing_page_detail_remove_promoter_title": "Promoter entfernen",
+    "@landing_page_detail_remove_promoter_title": {
+        "description": "Titel des Dialogs zum Entfernen eines Promoters"
+    },
+    "landing_page_detail_remove_promoter_message": "Möchtest du {promoterName} wirklich von dieser Landingpage entfernen?",
+    "@landing_page_detail_remove_promoter_message": {
+        "description": "Nachricht im Dialog zum Entfernen eines Promoters",
+        "placeholders": {
+            "promoterName": {
+                "type": "String"
+            }
+        }
+    },
+    "landing_page_detail_remove_promoter_button": "Entfernen",
+    "@landing_page_detail_remove_promoter_button": {
+        "description": "Button zum Entfernen eines Promoters"
+    },
+    "landing_page_detail_promoter_removed_success": "Promoter erfolgreich entfernt",
+    "@landing_page_detail_promoter_removed_success": {
+        "description": "Erfolgsmeldung nach Entfernen eines Promoters"
+    },
+    "landing_page_detail_promoters_updated_success": "Promoter-Zuweisungen aktualisiert",
+    "@landing_page_detail_promoters_updated_success": {
+        "description": "Erfolgsmeldung nach Aktualisierung der Promoter-Zuweisungen"
+    },
+    "landing_page_detail_promoters_updated_partial": "Einige Zuweisungen konnten nicht aktualisiert werden",
+    "@landing_page_detail_promoters_updated_partial": {
+        "description": "Teilweise Erfolgsmeldung nach Aktualisierung der Promoter-Zuweisungen"
     }
 }
