--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -4086,5 +4086,82 @@
     "landing_page_detail_not_found": "Landing page not found",
     "@landing_page_detail_not_found": {
         "description": "Not found message on the Landing Page Detail Page"
+    },
+    "landing_page_detail_assigned_promoters": "Assigned Promoters",
+    "@landing_page_detail_assigned_promoters": {
+        "description": "Title of the promoters section on the Landing Page Detail Page"
+    },
+    "landing_page_detail_assigned_promoters_subtitle": "Manage promoter assignments for this landing page",
+    "@landing_page_detail_assigned_promoters_subtitle": {
+        "description": "Subtitle of the promoters section on the Landing Page Detail Page"
+    },
+    "landing_page_detail_assign_promoter": "Assign Promoter",
+    "@landing_page_detail_assign_promoter": {
+        "description": "Button to assign promoters"
+    },
+    "landing_page_detail_assign_promoter_title": "Assign Promoter",
+    "@landing_page_detail_assign_promoter_title": {
+        "description": "Title of the dialog to assign promoters"
+    },
+    "landing_page_detail_total_promoters": "Total Promoters",
+    "@landing_page_detail_total_promoters": {
+        "description": "Label for the total number of promoters"
+    },
+    "landing_page_detail_registered_promoters": "Registered",
+    "@landing_page_detail_registered_promoters": {
+        "description": "Label for registered promoters"
+    },
+    "landing_page_detail_unregistered_promoters": "Unregistered",
+    "@landing_page_detail_unregistered_promoters": {
+        "description": "Label for unregistered promoters"
+    },
+    "landing_page_detail_no_promoters": "No promoters assigned",
+    "@landing_page_detail_no_promoters": {
+        "description": "Text when no promoters are assigned"
+    },
+    "landing_page_detail_no_promoters_available": "No promoters available",
+    "@landing_page_detail_no_promoters_available": {
+        "description": "Text when no promoters are available to assign"
+    },
+    "landing_page_detail_promoters_error_title": "Error loading promoters",
+    "@landing_page_detail_promoters_error_title": {
+        "description": "Error title when loading promoters"
+    },
+    "landing_page_detail_view_promoter": "View promoter",
+    "@landing_page_detail_view_promoter": {
+        "description": "Tooltip for view promoter button"
+    },
+    "landing_page_detail_remove_promoter": "Remove promoter",
+    "@landing_page_detail_remove_promoter": {
+        "description": "Tooltip for remove promoter button"
+    },
+    "landing_page_detail_remove_promoter_title": "Remove Promoter",
+    "@landing_page_detail_remove_promoter_title": {
+        "description": "Title of the dialog to remove a promoter"
+    },
+    "landing_page_detail_remove_promoter_message": "Do you really want to remove {promoterName} from this landing page?",
+    "@landing_page_detail_remove_promoter_message": {
+        "description": "Message in the dialog to remove a promoter",
+        "placeholders": {
+            "promoterName": {
+                "type": "String"
+            }
+        }
+    },
+    "landing_page_detail_remove_promoter_button": "Remove",
+    "@landing_page_detail_remove_promoter_button": {
+        "description": "Button to remove a promoter"
+    },
+    "landing_page_detail_promoter_removed_success": "Promoter removed successfully",
+    "@landing_page_detail_promoter_removed_success": {
+        "description": "Success message after removing a promoter"
+    },
+    "landing_page_detail_promoters_updated_success": "Promoter assignments updated",
+    "@landing_page_detail_promoters_updated_success": {
+        "description": "Success message after updating promoter assignments"
+    },
+    "landing_page_detail_promoters_updated_partial": "Some assignments could not be updated",
+    "@landing_page_detail_promoters_updated_partial": {
+        "description": "Partial success message after updating promoter assignments"
     }
 }
